[tool.poetry]
name = "am2320-driver"
version = "0.1.0"
description = "This is pip package for using AM2320 Digital Temperature and Humidity Sensor."
authors = ["chanyou0311 <chanyou0311@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
rpi = {git = "https://github.com/nosix/raspberry-gpio-emulator/", optional = true}
smbus2 = "^0.4.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[tool.poetry.extras]
emulator = ["rpi"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
